--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a class="active" href = "#overall_background2">Home</a></li>
                 <li><a href = "#activities">About Us</a></li>
-                <li><a href = "Welcome.html">Logout</a></li>
+                <li><a href = "index.html">Logout</a></li>
                 <li><a href = "#">Projects</a></li>
                 <li><a href = "#contacts">Contact Us</a></li>
             </ul>
