--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
                 <a href="#video-description"><button onclick = "openVideo();" id = "buttonStyleVideo">Open Video</button></a>
                 <a href="#transcript"><button onclick = "openTranscript();" id = "buttonStyleTranscript">Read Transcript</button><br/></a>
                 <div id="video-description" style="position:relative">
-                    <video width="550" height="400" style="border:1px 1px 1px" controls>
+                    <video width="100%" height="100%" style="border:1px 1px 1px" controls>
                         <source src="img/CERA.mp4" type="video/mp4"/>
                         Your browser does not support video tag
                     </video><br/>
