--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
                 <h2 style="text-align:center; color: orange;text-decoration:underline;"><strong>ABOUT CERA</strong></h2><br/>
                 <a href="#video-description"><button onclick = "openVideo();" id = "buttonStyleVideo">Open Video</button></a>
                 <a href="#transcript"><button onclick = "openTranscript();" id = "buttonStyleTranscript">Read Transcript</button><br/></a>
-                <div id="video-description" style="position:relative">
+                <div id="video-description" style="position:relative;z-index:0;">
                     <video width="100%" height="100%" style="border:1px 1px 1px" controls>
                         <source src="img/CERA.mp4" type="video/mp4"/>
                         Your browser does not support video tag
